<resources>
    <string name="app_name">Involta.Day1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_slideshow">Slideshow</string>
    <string name="involta_day2">Involta.Day2</string>
    <string name="recyclelistview">RecycleListView</string>
    <string name="image_only">Image only</string>
    <string name="text_only">Text only</string>
    <string name="text_with_image">Text with image</string>
    <string name="text_or_image">Text or image</string>
    <string name="view_pager_2">View Pager 2</string>

    <string name="btn_back">Назад</string>
    <string name="btn_next">Далее</string>
    <string name="btn_notification">notification</string>
    <string name="btn_snackbar">snackbar</string>
    <string name="btn_toast">toast</string>
    <string name="btn_dialog">dialog</string>

    <string name="notifications">Notifications</string>
    <string name="test_notify_name">Тестовое уведомление</string>
    <string name="test_notify_desc">Описание тестового уведомления</string>
    <string name="notify_shown_text">Сегодня %1$s, время %2$s \nНажата кнопка %3$s</string>
    <string name="gallerysearch">GallerySearch</string>
    <string name="input_image_txt">Выберите или сделайте фото и оно отобразится здесь</string>
    <string name="select_gallery_txt">выбрать</string>
    <string name="photo_image_txt">Сделать</string>
    <string name="webview">WebView</string>
    <string name="enter_web_site">Введите адрес сайта</string>
    <string name="db_search">Поиск</string>
    <string name="db_index">Индекс записи</string>
    <string name="db_insert">Вставить запись</string>
    <string name="db_value">Значение записи</string>
    <string name="bd_delete">Удалить запись</string>
    <string name="database">DataBase</string>
    <string name="databaseorm">DataBaseORM</string>
    <string name="convert">Конвертировать</string>
    <string name="parse_json_file_is_created">JSON записан в файл</string>
    <string name="parse_json_file_fail">Не удалось записать файл</string>
    <string name="json_parse">JSON Parse</string>

    <integer-array name="images">
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_4</item>
        <item>@drawable/image_5</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
        <item>@drawable/image_10</item>
    </integer-array>

</resources>