<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_text"
            android:icon="@drawable/ic_baseline_text_fields"
            android:title="@string/text_only" />
        <item
            android:id="@+id/nav_image"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/image_only" />
        <item
            android:id="@+id/nav_text_and_image"
            android:icon="@drawable/ic_baseline_textsms_24"
            android:title="@string/text_with_image" />
        <item
            android:id="@+id/nav_text_or_image"
            android:icon="@drawable/ic_baseline_image_search_24"
            android:title="@string/text_or_image" />
    </group>
</menu>