<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_notification"
        app:layout_constraintBottom_toTopOf="@id/btn_toast"
        app:layout_constraintEnd_toStartOf="@id/btn_snackbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_snackbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_snackbar"
        app:layout_constraintBottom_toTopOf="@id/btn_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_notification"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_toast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_toast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_notification" />

    <Button
        android:id="@+id/btn_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_toast"
        app:layout_constraintTop_toBottomOf="@+id/btn_snackbar" />
</androidx.constraintlayout.widget.ConstraintLayout>