<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_text">

    <fragment
        android:id="@+id/nav_text"
        android:name="com.example.involtaday1.ui.text.TextFragment"
        android:label="@string/text_only"
        tools:layout="@layout/fragment_text" />

    <fragment
        android:id="@+id/nav_image"
        android:name="com.example.involtaday1.ui.image.ImageFragment"
        android:label="@string/image_only"
        tools:layout="@layout/fragment_image" />

    <fragment
        android:id="@+id/nav_text_and_image"
        android:name="com.example.involtaday1.ui.image_and_text.ImageAndTextFragment"
        android:label="@string/text_with_image"
        tools:layout="@layout/fragment_text_and_image" />

    <fragment
        android:id="@+id/nav_text_or_image"
        android:name="com.example.involtaday1.ui.image_or_text.ImageOrTextFragment"
        android:label="@string/text_with_image"
        tools:layout="@layout/fragment_text_or_image" />

    <fragment
        android:id="@+id/nav_view_pager"
        android:name="com.example.involtaday1.ui.view_pager.ViewPagerFragment"
        android:label="@string/view_pager_2"
        tools:layout="@layout/fragment_text_or_image" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.involtaday1.ui.notification.NotificationFragment"
        android:label="Notifications"
        tools:layout="@layout/fragment_notify" />

    <fragment
        android:id="@+id/nav_image_gallery"
        android:name="com.example.involtaday1.ui.image_gallery.ImageGalleryFragment"
        android:label="GallerySearch"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_web_wiew"
        android:name="com.example.involtaday1.ui.web_view.WebViewFragment"
        android:label="WebView"
        tools:layout="@layout/fragment_web_view" />

    <fragment
        android:id="@+id/nav_database"
        android:name="com.example.involtaday1.ui.database.DataBaseFragment"
        android:label="DataBase"
        tools:layout="@layout/fragment_database" />

    <fragment
        android:id="@+id/nav_database_orm"
        android:name="com.example.involtaday1.ui.database_orm.DataBaseFragmentORM"
        android:label="DataBase ORM"
        tools:layout="@layout/fragment_database" />

</navigation>