<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_bd_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="search"
        android:hint="@string/db_search"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@id/btn_bd_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_bd_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/db_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/database_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/clBottomMenu"
        app:layout_constraintTop_toBottomOf="@id/et_bd_search"
        tools:listitem="@layout/text_and_image_recycler_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBottomMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent">



        <Button
            android:id="@+id/btn_db_insert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/db_insert"
            app:layout_constraintEnd_toStartOf="@+id/btn_db_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_bd_val" />

        <EditText
            android:id="@+id/et_bd_val"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="description"
            android:hint="@string/db_value"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_db_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bd_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_db_insert"
            app:layout_constraintTop_toBottomOf="@id/et_bd_val" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>