<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvEmptyDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/input_image_txt"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_gallery"
        app:layout_constraintEnd_toEndOf="@+id/img_gallery"
        app:layout_constraintStart_toStartOf="@+id/img_gallery"
        app:layout_constraintTop_toTopOf="@+id/img_gallery" />

    <ImageView
        android:id="@+id/img_gallery"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/input_image_txt"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pick_gallery_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/select_gallery_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/take_gallery_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_gallery"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/take_gallery_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/photo_image_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pick_gallery_btn"
        app:layout_constraintTop_toBottomOf="@id/img_gallery"
        app:layout_constraintVertical_bias="0" />
</androidx.constraintlayout.widget.ConstraintLayout>